data/derived/comb/progs/unify/prog4790.ml.out
Characters 77-81:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type unit
